# SFND_Camera

./: .clang-format  .gitignore
Lesson 2 - Autonomous Vehicles and Computer Vision/The OpenCV Library/OpenCV_exercises/: CMakeLists.txt
Lesson 2 - Autonomous Vehicles and Computer Vision/The OpenCV Library/OpenCV_exercises/src/: change_pixels.cpp  create_matrix.cpp  load_image_1.cpp  load_image_2.cpp  load_image_3.cpp
Lesson 3 - Engineering a Collision Detection System/Estimating TTC with Lidar/TTC_lidar/src/: compute_ttc_lidar.cpp  dataStructures.h  structIO.cpp  structIO.hpp
